# django-practice

./: .gitignore  README.md  pyproject.toml
config/: settings.py
