[project]
name = "myproj"
version = "0.1.0"
description = ""
authors = [
    {name = "Kris",email = "kris1toja@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5,<6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
